--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="col-12">
 		<div class="row">
 			<div class="header">
-				Opensource
+				Welcome to Open Source
 			</div>
 		</div>
 	</div>
