--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 	<script src="assets/js/jquery-3.3.1.slim.min.js"></script>
 	<script src="assets/js/popper.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
+	<style type="text/css"></style>
 </head>
 <body>
 	<div class="col-12">
 		<div class="row">
-			<div class="header">
-				Welcome to Open Source
+			<div class="header" style="width: 100%;">
+				<img src="assets/img/banner.png" width="100%">
 			</div>
 		</div>
 	</div>
