--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="col-12">
 		<div class="row">
 			<div class="header" style="width: 100%;">
-				<img src="assets/img/banner.png" width="100%">
+				<img src="assets/img/open-source.jpg" width="100%">
 			</div>
 		</div>
 	</div>
