--- a/about/index.html
+++ b/about/index.html
@@ -184,23 +184,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
             <a href="#">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="#">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.linkedin.com/in/manivannan-murugavel-9455a511a/">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                <i class="fa fa-medium fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -212,6 +196,15 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               </span>
             </a>
           </li>
+          <li class="list-inline-item">
+            <a href="https://www.linkedin.com/in/manivannan-murugavel-9455a511a/">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+
         </ul>
       </div>
     </section>
