--- a/about/index.html
+++ b/about/index.html
@@ -122,7 +122,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none  mx-0 px-0"><img src="img/logo-white.png" alt="" class="img-fluid"></span>
+      <span class="d-block d-lg-none  mx-0 px-0"><img src="img/logo-white.png" alt="" class="img-fluid" style="width:50px;height:38px;"></span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="../img/profile.jpg" alt="">
       </span>
@@ -173,11 +173,17 @@ License URL: https://creativecommons.org/licenses/by/4.0/
         </div>
         <p class="mb-5" style="max-width: 500px;font-size: 1.2em;color: #6f6a6a;">3+ Years of experience as AI engineer with strong technical knowledge in Deep Learning, Machine Learning, NLP, Computer Vision, Big Data and Data Science platforms.</p>
         <div class="row mb-5 buttons">
-          <button class="btn download">Download CV</button>
-          <div class="" style="width:50px;">
-
+          <div class="col-sm-3 col-xs-12">
+            <button class="btn download">Download CV</button>
           </div>
-          <button class="btn download" onclick="location.href='../contact/#contactform'">Send Message</button>
+          <div class="col-sm-3 col-xs-12">
+            <button class="btn download" onclick="location.href='../contact/#contactform'">Send Message</button>
+          </div>
+
+          <!-- <div class="" style="width:50px;">
+
+          </div> -->
+
         </div>
         <ul class="list-inline list-social-icons mb-0">
           <li class="list-inline-item">
